src/test/deca/context/invalid/invalid_sans_objet/decl_forbidden_type.deca
// Description:
//    test de programme contextuellement incorrect.
//
// Resultats:
//    Ligne 12 : Erreur de déclaration.
//    champ de type void interdit.
//
// Historique:
//    cree le 09/01/2021

{
	void x;
}